--- a/game/pom.xml
+++ b/game/pom.xml
@@ -66,6 +66,18 @@
 			<artifactId>spring-jdbc</artifactId>
 			<version>6.0.2</version>
 		</dependency>
+                <dependency>
+            <groupId>org.mockito</groupId>
+            <artifactId>mockito-core</artifactId>
+            <version>4.5.1</version>
+            <scope>test</scope>
+        </dependency>
+        <dependency>
+            <groupId>org.assertj</groupId>
+            <artifactId>assertj-core</artifactId>
+            <version>3.23.1</version>
+            <scope>test</scope>
+        </dependency>
 	</dependencies>
 
 	<build>
